# cs438-labs

./: README.md
biped-main/: .gitignore  README.md
biped-main/cmake/biped/: BoardOptions.cmake
biped-main/config/arduino_cmake_toolchain/: compiler_sdk_path.patch  general.patch
biped-main/config/libraries/DFRobot_BMX160/: gyro.patch  i2c.patch  macro.patch
biped-main/config/libraries/Kalman_Filter_Library/: double.patch
biped-main/config/libraries/MCP23018/: esp32.patch  i2c.patch
biped-main/config/libraries/STM32duino_VL53L4CX/: io_expander.patch
biped-main/doc/doxygen/: Doxyfile
biped-main/scripts/biped/: doxygen.bash  global.bash
biped-main/src/biped/: CMakeLists.txt
biped-main/src/biped/actuator/: CMakeLists.txt  actuator.cpp  actuator.h
biped-main/src/biped/common/: CMakeLists.txt  global.cpp  global.h  parameter.h  pin.h  type.h
biped-main/src/biped/controller/: CMakeLists.txt  controller.cpp  controller.h  open_loop_controller.cpp  open_loop_controller.h  pid_controller.cpp  pid_controller.h
biped-main/src/biped/main/: CMakeLists.txt  biped.cpp
biped-main/src/biped/planner/: CMakeLists.txt  maneuver_planner.cpp  maneuver_planner.h  planner.h  waypoint_planner.cpp  waypoint_planner.h
biped-main/src/biped/platform/: CMakeLists.txt  camera.cpp  camera.h  compass.cpp  compass.h  display.cpp  display.h  encoder.cpp  encoder.h  imu.cpp  imu.h  io_expander.cpp  io_expander.h  neopixel.cpp  neopixel.h  serial.cpp  serial.h  time_of_flight.cpp  time_of_flight.h
biped-main/src/biped/sensor/: CMakeLists.txt  sensor.cpp  sensor.h
biped-main/src/biped/task/: CMakeLists.txt  interrupt.cpp  interrupt.h  task.cpp  task.h
biped-main/src/biped/utility/: low_pass_filter.hpp  math.cpp  math.h  median_filter.hpp
lab1/: CMakeLists.txt  CMakeListsPrivate.txt  platformio.ini
lab1/src/: README.md  main.cpp  main.cpp.bak  math.h  neopixel.cpp  serial.cpp
lab2/: platformio.ini
lab2/src/: README.md  display.cpp  display.h  low_pass_filter.hpp  main.cpp  parameter.h  pin.h  serial.h
lab4/: platformio.ini
lab4/src/: MCP23018.cpp  MCP23018.h  README.md  main.cpp  math.cpp  neopixel.h  parameter.h
lab5-main/: README.md
lab5-main/config/arduino_cmake_toolchain/: arduino_cli_detection.patch  property_resolution.patch
lab5-main/config/eclipse/: format_cpp.xml
lab5-main/doc/doxygen/: Doxyfile
lab5-main/scripts/biped/: global.bash  setup.bash
lab5-main/src/biped/: CMakeLists.txt
lab5-main/src/biped/common/: CMakeLists.txt  global.cpp  global.h  parameter.h  type.h
lab5-main/src/biped/main/: CMakeLists.txt  biped.cpp
lab5-main/src/biped/platform/: CMakeLists.txt  display.cpp  display.h  encoder.cpp  encoder.h  imu.cpp  imu.h  io_expander.cpp  io_expander.h  neopixel.cpp  serial.cpp  serial.h  time_of_flight.cpp  time_of_flight.h
lab5-main/src/biped/sensor/: sensor.cpp  sensor.h
lab5-main/src/biped/task/: CMakeLists.txt  interrupt.cpp  interrupt.h  task.cpp  task.h
lab5-main/src/biped/utility/: CMakeLists.txt  math.cpp  math.h
